--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 ungoogled-chromium_131.0.6778.85-1.AppImage
 ungoogled-chromium_131.0.6778.85-1.AppImage
+ungoogled-chromium_131.0.6778.85-1.AppImage
